--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Little Millennium Karate Class</title>
+    <title>Lions Karate Club</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
         
@@ -144,7 +144,7 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 Little Millennium Karate Class. All Rights Reserved.</p>
+            <p>© 2025 Lions Karate Club Pune. All Rights Reserved.</p>
         </div>
     </div>
 </body>
